<resources>
    <string name="app_name">Battleships</string>
    <string name="NextBtn">Next Page</string>

    <!-- Page Title Strings -->
    <string name="startScreenStr">Start Screen Fragment</string>
    <string name="gameStr">Game Activity</string>
    <string name="gameEndStr">Beim Klabautermann! Die Seeschlacht ist vollendet</string>
    <string name="lobbyStr">Lobby Fragment</string>
    <string name="loginStr">Log In</string>
    <string name="mainStr">Main Activity</string>
    <string name="placeShipStr">Placeship Activity</string>
    <string name="settingsStr">Einstellungen</string>
    <string name="spectatorWaitingStr">Die Piraten planen noch ihre Schlacht</string>
    <string name="patienceStr">Geduld!</string>
    <string name="rulesStr">Piratenkodex</string>
    <string name="imprintStr">Impressum</string>
    <string name="pointsStr">Punkte</string>
    <string name="points2Str">Punkte:</string>
    <string name="nameStr">Name</string>
    <string name="placeStr">Platz</string>
    <string name="serverIPStr">Server-IP</string>
    <string name="serverPortStr">Server-Port</string>
    <string name="usernameStr">Username</string>
    <string name="usernameMissingStr">Trage deinen Kapitänsnamen ein</string>
    <string name="serverIpMissingStr">Trage eine Server-Ip ein</string>
    <string name="serverPortMissingStr">Trage einen Server-Port ein</string>
    <string name="selectPlayer">Spieler auswählen: </string>
    <string name="timeLeft">Zeit übrig: </string>

    <string name="exitGameString">Wollen Sie das Spiel wirklich verlassen?</string>
    <string name="exitButton">Jo ich bin raus.</string>
    <string name="cancelButton">Nein, ich möchte hier bleiben.</string>

    <string name="firstPlacePlayerName">Player 1</string>
    <string name="secondPlacePlayerName">Player 2</string>
    <string name="thirdPlacePlayerName">Player 3</string>
    <string name="log_in">log in</string>
    <string name="gameName">GameName</string>
    <string name="gameState">GameState</string>
    <string name="fieldSize">FieldSize</string>
    <string name="countPlayer">PlayerCount</string>
    <string name="todoLobby">Tap on a game to spectate!</string>

    <string name="spielregeln">Unser Piratenkodex</string>
    <string name="spielregelnText">
        <b>Zahl der Spieler: </b>
        \n mindestens 2\n
        <b>Größe der Schiffe: </b>
        \n mindestens 2 (in unterschiedlichen Formen)\n
        <b>Ziel des Spiels: </b>\n
                Jeder Spieler versteckt seine Schiffe auf dem eigenen Spielfeld vor seinen Gegnern und versucht, durch das Abschießen und Versenken gegnerischer Schiffe eine möglichst hohe Punktzahl zu erzielen.\n
        <b>Platzieren der eigenen Schiffe: </b>\n
                Zu Spielbeginn platziert jeder Spieler seine Schiffe im eigenen Spielfeld. Schafft er dies nicht in der vorgegebenen Zeit, werden die übrigen Schiffe automatisch auf das Spielfeld gesetzt. Die Schiffe dürfen am Rand liegen, dürfen sich aber nicht überschneiden oder an den Seiten oder Kanten aneinanderstoßen.\n
        <b>Ablauf einer Spielrunde: </b>\n
                Alle Spieler, die am Anfang der Runde noch nicht-versenkte Schiffe auf ihrem Spielfeld haben, wählen innerhalb der vorgegebenen Zeit gleichzeitig die gewünschten Ziele ihrer Schüsse aus. Diese kann man beliebig auf alle Felder aufteilen und auch auf eigene Schiffe zielen.
                Am Ende einer Spielrunde bekommt jeder Spieler alle Treffer und die versenkten Schiffe dieser Runde mitgeteilt.\n
        <b>Versenken von Schiffen: </b>\n
                Ein Schiff gilt als versenkt, wenn jede Koordinate eines Schiffes mindestens einmal getroffen wurde.\n
        <b>Punkte: </b>\n
                Für jeden Treffer und jedes davon versenkte Schiff erhält der verantwortliche Spieler entsprechende Punkte. Schießt ein Spieler auf sein eigenes Schiff oder auf Ziele, die bereit getroffen wurden, bekommt er dafür keine Punkte.\n
        <b>Spielende: </b>\n
                Das Spiel endet, wenn nur noch ein Spieler nicht-versenkte Schiffe besitzt.
                Anhand der Punktzahlen aller Spieler wird dann die Platzierung bestimmt.
    </string>
    <string name="impressum">Impressum</string>
    <string name="impressumText">
        <b>Ansprechpartner: </b>\n Raphael Reimann\n
        <b>Anschrift: </b>\n Universität Paderborn\n Warburger Str. 100,\n 33100 Paderborn \n
        <b>Music by Sea of Thieves: </b>\n 1.Maiden Voyage,\n
        2.Sea of Thieves Main Track,\n
        3.Bosun Bill (Concertina and Hurdy Gurdy), \n
        4.Becalmed - Concertina and Hurdy-Gurdy, \n
        5.Grogg Mayles (Concertina and Hurdy-Gurdy), \n
        6.Ride of the Valkyries (Concertina)</string>
</resources>
