<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="40dp"
                                                   android:layout_margin="3dp"
                                                   android:background="@color/color_light_brown">


    <TextView
        android:id="@+id/lobbyGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameName"
        android:textColor="@color/color_brown_main"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="1dp"/>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="34dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:background="@color/color_light_brown"
        android:padding="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lobbyGameStatus"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_time_icon" />

    <TextView
        android:id="@+id/lobbyGameStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:padding="1dp"
        android:text="@string/gameState"
        android:textColor="@color/color_brown_main"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="34dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:padding="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lobbyPlayerCount"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_player_icon" />

    <TextView
        android:id="@+id/lobbyPlayerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:padding="1dp"
        android:text="@string/countPlayer"
        android:textColor="@color/color_brown_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="34dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:background="@color/color_light_brown"
        android:padding="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lobbyFiledSize"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_mapsize_icon" />

    <TextView
        android:id="@+id/lobbyFiledSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:text="@string/fieldSize"
        android:textColor="@color/color_brown_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
