<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="de.upb.codingpirates.battleships.android.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@mipmap/lobby_bg">

        <ImageButton
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_login_button"
            android:contentDescription="@string/log_in"
            android:onClick="@{viewmodel::loginButtonClicked}"
            android:text="@string/loginStr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.869" />

        <TextView
            android:id="@+id/loginActivityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/loginStr"
            android:textSize="40sp"
            android:textColor="@color/color_brown_main"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameInputLayout"
                style="@style/TextInputLayoutStyle"
                android:background="#00FFFFFF"
                android:backgroundTint="#00FFFFFF"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameInputView"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/usernameStr"
                    android:textColor="@color/color_brown_main"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/serverIpInputLayout"
                style="@style/TextInputLayoutStyle"
                app:boxStrokeColor="@color/color_brown_main">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/serverIpInputView"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/serverIPStr"
                    android:inputType="text"
                    android:text="192.168.178.27"
                    android:textColor="@color/color_brown_main" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/serverPortInputLayout"
                style="@style/TextInputLayoutStyle"
                app:boxStrokeColor="@color/color_brown_main">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/serverPortInputView"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/serverPortStr"
                    android:text ="47345"
                    android:inputType="number"
                    android:textColor="@color/color_brown_main"
                    app:hintTextColor="@color/color_brown_main" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.843"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_settings_icon"
            android:onClick="@{viewmodel::settingsButtonClicked}"/>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:translationZ="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>