<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="de.upb.codingpirates.battleships.android.gameEnd.GameEndViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gameEndViewConstraintLayout"
        android:background="@mipmap/endcreen_bg">

        <ImageButton
            android:id="@+id/exitGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="@{viewmodel::exitGameEndButtonClicked}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_gameleave" />

        <ImageView
            android:id="@+id/gameEndActivityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/ic_gameendtag"
            android:textAlignment="center"
            android:textColor="@color/color_brown_main"
            android:textSize="20sp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.004" />

        <TextView
            android:id="@+id/firstPlaceTextView"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/firstPlacePlayerName"
            android:textSize="18sp"
            android:textColor="@color/color_brown_main"
            android:ellipsize="end"
            app:layout_constraintBottom_toTopOf="@+id/firstPlaceImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameEndActivityTitle" app:layout_constraintVertical_bias="1.0"/>

        <ImageView
            android:id="@+id/firstPlaceImageView"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="92dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameEndActivityTitle"
            app:srcCompat="@drawable/ic_winner_1" />

        <TextView
            android:id="@+id/firstPlacePointsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points2Str"
            app:layout_constraintEnd_toStartOf="@+id/thirdPlaceImageView"
            app:layout_constraintStart_toEndOf="@+id/secondPlaceImageView"
            app:layout_constraintTop_toBottomOf="@id/firstPlaceImageView"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/secondPlaceTextView"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/secondPlacePlayerName"
            android:textColor="@color/color_brown_main"
            app:layout_constraintBottom_toTopOf="@+id/secondPlaceImageView"
            app:layout_constraintStart_toStartOf="parent"/>
        <ImageView
            android:id="@+id/secondPlaceImageView"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginTop="165dp"
            app:layout_constraintEnd_toStartOf="@+id/firstPlaceImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameEndActivityTitle"
            app:srcCompat="@drawable/ic_winner_2" />


        <TextView
            android:id="@+id/secondPlacePointsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points2Str"
            app:layout_constraintEnd_toStartOf="@+id/firstPlaceImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondPlaceImageView"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/thirdPlaceTextView"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/thirdPlacePlayerName"
            android:textColor="@color/color_brown_main"
            android:ellipsize="end"
            app:layout_constraintBottom_toTopOf="@+id/thirdPlaceImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/firstPlaceImageView"
            app:layout_constraintTop_toBottomOf="@+id/gameEndActivityTitle" app:layout_constraintVertical_bias="1.0"/>

        <ImageView
            android:id="@+id/thirdPlaceImageView"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_marginTop="184dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/firstPlaceImageView"
            app:layout_constraintTop_toBottomOf="@+id/gameEndActivityTitle"
            app:srcCompat="@drawable/ic_winner_3" />

        <TextView
            android:id="@+id/thirdPlacePointsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points2Str"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/firstPlaceImageView"
            app:layout_constraintTop_toBottomOf="@+id/thirdPlaceImageView"
            android:layout_marginTop="15dp"/>

        <TableLayout
            android:id="@+id/playerRankingHeaderLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:gravity="fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thirdPlacePointsTextView">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/placeStr"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/nameStr"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/pointsStr"
                    android:textStyle="bold" />
            </TableRow>

            <ScrollView
                android:id="@+id/scrollViewLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playerRankingHeaderLayout"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">

                <TableLayout
                    android:id="@+id/playerRankingTableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2">

                </TableLayout>

            </ScrollView>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>